2011-06-10 Hauke Hain  <hhpreuss@googlemail.com>

	* updated documentation and manual

2011-05-31 Hauke Hain  <hhpreuss@googlemail.com>

	* div / createcomments: support new style mm_forum link creation
							by forcing to use own TypoScript parser for linktopage

2010-10-29 Hauke Hain  <hhpreuss@googlemail.com>

	* div: SQL optimation

2010-05-30 Hauke Hain  <hhpreuss@googlemail.com>

	* pi1: Outsourced creation of a new comment topic to a helper function in div
	* lib/div: get relation table from function instead of a parameter
	* lib/createcomments: create comment post in comment topic 	

2010-05-26 Hauke Hain  <hhpreuss@googlemail.com>

	* pi1: Load TypoScriptData from database only if necessary. Do not use hook if
	  only the pid is needed.

2010-05-24 Hauke Hain  <hhpreuss@googlemail.com>

	* div: Added hooks:
	    - getTypoScriptDataHook
	    - overwriteParameter	

2010-04-26 Hauke Hain  <hhpreuss@googlemail.com>

	* Added translation possibility for "comments"
	* Wrap for comments part (###COMMENTS###) that actually has got comments:
	  plugin.tx_mmforumcomments_pi1.template.commentsWrap.wrap = |
	* Renamed TypoScript configuration path_img to commentButtonPath_img
	* Added possibility to change the stdWrap.wrap of the ###LINKTOTOPIC### button
	 	plugin.tx_mmforumcomments_pi1.template.commentButtonNormalStdWrap.wrap = |
	
2010-04-20 Hauke Hain  <hhpreuss@googlemail.com>

	* initial release  	